@@ -29,17 +29,21 @@
 # B20 on Windows NT 4.0.
 
 # Here we define a bunch of command line tools used in the rest of the system.
+# Note that it is safe to use the nice, long GNU style options here.  In the other Makefiles,
+# it isn't safe, since we want compatibility with Unix (but not GNU) tools on Solaris.
 
 MV := $(TOOLS_DIR)/mv.exe
 ECHO := $(TOOLS_DIR)/echo.exe
 MKDIRS := $(TOOLS_DIR)/mkdir.exe --parents
 TOUCH := $(TOOLS_DIR)/touch.exe
+RM := $(TOOLS_DIR)/rm.exe --force 
 RMDIRS := $(TOOLS_DIR)/rm.exe --force --recursive
 CP := $(TOOLS_DIR)/cp.exe
 CAT := $(TOOLS_DIR)/cat.exe
 FIND := $(TOOLS_DIR)/find.exe
+TAR := $(TOOLS_DIR)/tar.exe
 
-# Apparently Cygnus relies on NT's change directory command
+# Provided internally by Cygnus
 
 CD := cd
 
