@@ -108,7 +108,7 @@ war-install: $(INSTALL_DIR)/$(JAR_FILE)
 
 $(INSTALL_DIR)/$(JAR_FILE): $(JAR_FILE)
 	@$(ECHO) "\n*** Installing $(JAR_FILE) to $(INSTALL_DIR) ***\n"
-	@$(CP) $(JAR_FILE) --force $(INSTALL_DIR)
+	@$(CP) -f $(JAR_FILE) $(INSTALL_DIR)
 endif
 endif
 
@@ -121,7 +121,7 @@ $(WAR_LIB_STAMP_FILE): $(INSTALL_LIBRARIES)
 ifdef INSTALL_LIBRARIES
 	@$(ECHO) "\n*** Copying runtime libraries ... ***\n"
 	@$(ECHO) Copying: $(notdir $?)
-	@$(CP) --force $? $(WAR_LIB_DIR)
+	@$(CP) -f $? $(WAR_LIB_DIR)
 	@$(TOUCH) $(MOD_DIRTY_JAR_STAMP_FILE)
 endif
 	@$(TOUCH) $@ 
@@ -129,7 +129,7 @@ endif
 $(WAR_WEB_INF_STAMP_FILE): web.xml $(WEB_INF_RESOURCES)
 	@$(ECHO) "\n*** Copying WEB-INF resources ... ***\n"
 	@$(ECHO) Copying: $(notdir $?)
-	@$(CP) --force $? $(WAR_INF_DIR)
+	@$(CP) -f $? $(WAR_INF_DIR)
 	@$(TOUCH) $@ $(MOD_DIRTY_JAR_STAMP_FILE)
 
 ifneq "$(CONTEXT_RESOURCES)" ""
@@ -146,7 +146,7 @@ FINAL_CONTEXT_RESOURCES := \
 $(WAR_CONTEXT_STAMP_FILE): $(FINAL_CONTEXT_RESOURCES)
 	@$(ECHO) "\n*** Copying context resources ... ***\n"
 	@$(ECHO) Copying: $(notdir $?)
-	@$(CP) --force --parents $? $(WAR_APP_DIR)
+	@$(CP) -f -P $? $(WAR_APP_DIR)
 	@$(TOUCH) $@ $(MOD_DIRTY_JAR_STAMP_FILE)
 else
 
